# xinetd

./: .gitignore  .travis.yml  CHANGELOG  COPYRIGHT  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  xinetd.spec
contrib/: xinetd.conf  xinetd.service
contrib/xinetd.d/: chargen  chargen-dgram  chargen-stream  chargen-udp  daytime  daytime-dgram  daytime-stream  daytime-udp  discard  discard-dgram  discard-stream  discard-udp  echo  echo-dgram  echo-stream  echo-udp  ftp-sensor  servers  services  tcpmux-server  time  time-dgram  time-stream  time-udp
libs/src/misc/: m_env.c  m_env.h
libs/src/portable/: Makefile.in
libs/src/pset/: Makefile.in  pset.h
libs/src/sio/: impl.h  sio.c  sio.h  sioconf.h  siosup.c
libs/src/str/: str.h  strparse.c  strutil.c
libs/src/xlog/: filelog.c  filelog.h  slog.h  xlog.c  xlog.h
m4/: xinetd_check.m4
man/: Sprint.3  m_env.3  pset.3  psi.3  sio.3  strparse.3  strprint.3  strutil.3  xconv.pl.8  xinetd.8  xinetd.conf.5  xinetd.log.5  xlog.3
src/: access.c  addr.c  attr.h  builtins.c  child.c  conf.c  confparse.c  connection.c  connection.h  defs.h  ident.c  includedir.c  inet.c  init.c  int.c  intcommon.c  intcommon.h  internals.c  itox.c  log.c  main.c  parse.c  parsers.c  parsers.h  reconfig.c  redirect.c  sconf.c  sconf.h  server.c  service.c  service.h  signals.c  state.h  tcpint.c  udpint.c  util.c  xgetloadavg.c  xmdns.c  xpoll.h
src/misc/: m_env.c
src/portable/: cvt.c  fake-getaddrinfo.h  libportable.h  strcasecmp.c
src/sio/: impl.h  sio.c  sioconf.h  siosup.c
xinetd/: Makefile.in  access.c  access.h  addr.c  attr.h  builtins.c  builtins.h  child.c  conf.c  confparse.c  connection.c  connection.h  defs.h  env.c  ident.c  includedir.c  inet.c  init.c  int.c  internals.c  itox.8  itox.c  log.c  log.h  logctl.c  main.c  msg.c  nvlists.c  options.c  parse.c  parse.h  parsers.c  parsers.h  reconfig.c  redirect.c  retry.c  sample.conf  sconf.c  sconf.h  sensor.c  (+16 more)
xinetd/misc/: Makefile.in
xinetd/sio/: Makefile.in
xinetd/str/: Makefile.in
xinetd/xlog/: Makefile.in
